<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_explorar"
            android:icon="@drawable/ic_explorar"
            android:title="@string/explorar" />




        <item android:title="@string/categorias"
            android:id="@+id/nav_categorias"
            android:icon="@drawable/list" />

        <item
            android:id="@+id/nav_festas"
            android:title="@string/festas"
            android:icon="@drawable/party"
            android:visible="false"/>
        <item
            android:id="@+id/nav_music"
            android:title="@string/musica"
            android:icon="@drawable/music_player"
            android:visible="false"/>
        <item
            android:id="@+id/nav_aprender"
            android:title="@string/aprender"
            android:icon="@drawable/party"
            android:visible="false"/>

        <item
            android:id="@+id/nav_negocios"
            android:title="@string/negocios"
            android:icon="@drawable/join"
            android:visible="false"/>
        <item
            android:id="@+id/nav_cultura"
            android:title="@string/cultura"
            android:icon="@drawable/theatre_masks"
            android:visible="false"/>
        <item
            android:id="@+id/nav_bemEstar"
            android:title="@string/bemEstar"
            android:icon="@drawable/party"
            android:visible="false"/>




    </group>


    <item android:id="@+id/nav_com"
        android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_avaliacao"
                android:icon="@drawable/ic_avaliacao"
                android:title="@string/avaliar" />
            <item
                android:id="@+id/nav_ajuda"
                android:icon="@drawable/ic_central_ajuda"
                android:title="@string/ajuda" />

            <item
                android:id="@+id/nav_termo_uso"
                android:icon="@drawable/ic_termo_uso"
                android:title="@string/termo_uso" />
            <item
                android:id="@+id/nav_privacidade"
                android:icon="@drawable/ic_politica_priv"
                android:title="@string/polit_priv" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_sair"
                android:title="@string/sair" />

        </menu>
    </item>

</menu>
