<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_calendar_plus"
            android:title="@string/evento" />

        <item android:title="Categorias"
            app:showAsAction="ifRoom">
            <menu>

                <item android:title="Categorias"
                    android:icon="@drawable/ic_calendar_plus"/>
                <item
                    android:id="@+id/nav_relig"
                    android:icon="@drawable/ic_avaliacao"
                    android:title="@string/avaliar" />
                <item
                    android:id="@+id/nav_cult"
                    android:icon="@drawable/ic_central_ajuda"
                    android:title="@string/ajuda" />

                <item
                    android:id="@+id/nav_palest"
                    android:icon="@drawable/ic_termo_uso"
                    android:title="@string/termo_uso" />
                <item
                    android:id="@+id/nav_shows"
                    android:icon="@drawable/ic_politica_priv"
                    android:title="@string/polit_priv" />
                <item
                    android:id="@+id/musc_bar"
                    android:icon="@drawable/ic_sair"
                    android:title="@string/sair" />

            </menu>
        </item>

        <item
            android:id="@+id/nav_explorar"
            android:icon="@drawable/ic_explorar"
            android:title="@string/explorar" />

    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_avaliacao"
                android:icon="@drawable/ic_avaliacao"
                android:title="@string/avaliar" />
            <item
                android:id="@+id/nav_ajuda"
                android:icon="@drawable/ic_central_ajuda"
                android:title="@string/ajuda" />

            <item
                android:id="@+id/nav_termo_uso"
                android:icon="@drawable/ic_termo_uso"
                android:title="@string/termo_uso" />
            <item
                android:id="@+id/nav_privacidade"
                android:icon="@drawable/ic_politica_priv"
                android:title="@string/polit_priv" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_sair"
                android:title="@string/sair" />

        </menu>
    </item>

</menu>
