<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".LoginEmailActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/editText_EmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Insira seu e-mail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha"/>

    <EditText
        android:id="@+id/editText_SenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Insira sua senha"/>

    <Button
        android:id="@+id/button_Recuperar"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:backgroundTint="#f0f0f0"
        android:elevation="@android:dimen/thumbnail_height"
        android:text="@string/recuperar"
        android:textIsSelectable="true"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    <Button
        android:id="@+id/button_EntrarLogin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:text="@string/entrar" />



        <View
            android:layout_width="2dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>


</LinearLayout>
    </LinearLayout>

</ScrollView>

</LinearLayout>
