<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/editText_EmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Insira um e-mail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/senha"/>

    <EditText
        android:id="@+id/editText_SenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Insira uma senha"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/repetir_senha"/>

    <EditText
        android:id="@+id/editText_RepetirSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Repita sua senha"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">


            <View
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_cadastrarUsuario"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Cadastrar" />

            <View
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_cancelar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancelar" />

            <View
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>
